# OPTIMIZER_v3

./: .gitignore  ARCHITECTURE.md  AUXILIARY.md  BUILD_PLAN.md  CONTEXT.md  OPTIMIZERS.md  README.md  environment.yml  install.sh  pyproject.toml  system_plan.md  uninstall.sh  update.sh
.obsidian/: app.json  graph.json  workspace.json
Theory/guess/: GUESS_THEORY_HUB.md  THEORY_COMPOSITE_RESTARTS.md  THEORY_CONSTANT_RAMP.md  THEORY_FOURIER_SERIES.md  THEORY_HARMONIC_WAVES.md  THEORY_LOCALIZED_PULSES.md  THEORY_RANDOM_CONTROLS.md  THEORY_RANDOM_FOURIER.md  THEORY_SMOOTH_RANDOM.md
Theory/optimizers/: OPTIMIZER_THEORY_HUB.md  README.md  THEORY_ADAM_FAMILY.md  THEORY_ADAPTIVE_SCALING.md  THEORY_CMA_ES.md  THEORY_LBFGS.md  THEORY_LINE_SEARCH.md  THEORY_MOMENTUM.md  THEORY_NONLINEAR_CG.md  adam_family.md  adaptive_scaling.md  cma_es.md  gradient_descent_and_line_search.md  lbfgs.md  momentum.md  nonlinear_cg.md
Theory/utils/: THEORY_DIAGNOSTIC_REPORTS.md  THEORY_FINITE_DIFFERENCE_CHECKS.md  (+5 more)
optimizer/: __init__.py  catalog.py  controls.py  library.py  result.py  state.py  system.py
plan/: ARCHITECTURE.md  BUILD_ORDER.md  CURRICULUM_AND_CHECKPOINTS.md  FLOW.md  PUBLIC_API.md  README.md
systems/: __init__.py
templates/: system_template.py
tests/: TESTING_HUB.md  test_advanced_optimizers.py  test_blackbox.py  test_catalog.py  test_controls.py  test_engine.py  test_guesses.py  test_namespaces.py  test_optimizers.py  test_public_api.py  test_result_state.py  test_system_contract.py  test_trace_checkpoint.py  test_universal_robust_4th_system.py  test_utils_tools.py
(+138 files in other folders)
